making sandbox & text

--- a/src/component/Common/Intro/intro.module.css
+++ b/src/component/Common/Intro/intro.module.css
@@ -2,10 +2,24 @@
     display: flex;
     flex-direction: column;
     align-self: center;
-    width: 65%;
+    width: 60%;
+}
+
+.introText {
+    padding: 0 0 2rem 4.5rem;
 }
 
 .introText h2 {
     font-size: 4em;
+    line-height: 1.5em;
+}
+
+.introText span {
+    display: block;
+    padding: 2rem 0 4rem 0;
+}
+
+Button {
+    margin-left: 4.5rem;
 }
 
