--- a/src/component/Common/Navigation/navigation.module.css
+++ b/src/component/Common/Navigation/navigation.module.css
@@ -2,7 +2,16 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 1rem 1.5rem;
+    padding: 1rem 4.5rem;
+}
+
+.logo {
+    display: flex;
+    align-items: center;
+}
+
+.logo div {
+    padding: 0 8px;
 }
 
 .logo__image img{
