--- a/src/component/Common/Sandbox/sandbox.module.css
+++ b/src/component/Common/Sandbox/sandbox.module.css
@@ -1,5 +1,8 @@
 .container {
     display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .container img {
@@ -14,8 +17,9 @@
     justify-content: space-evenly;
     align-items: center;
     width: 55vh;
-    height: 70vh;
+    height: 60vh;
     background-color: #c4c4c4;
     align-self: center;
     border-radius: 50px;
+    margin: 1.5rem 0;
 }
